--- a/project_1/project_1.sim/sim_1/behav/xsim.dir/tb_behav/webtalk/usage_statistics_ext_xsim.html
+++ b/project_1/project_1.sim/sim_1/behav/xsim.dir/tb_behav/webtalk/usage_statistics_ext_xsim.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'><H3>XSIM Usage Report</H3><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Sun Feb 26 00:05:01 2017</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Sun Feb 26 00:18:47 2017</TD>
   <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>XSIM v2014.4 (64-bit)</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>1071353</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
@@ -16,7 +16,7 @@
   <TD BGCOLOR='#DBE5F1'><B>target_speed</B></TD><TD>not_applicable</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>adc138e7-d51f-4dd1-90f1-c1df81e72283</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>1c0c2746135f4662bbafa966a917c4d6</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>1</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>2</TD>
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
@@ -35,27 +35,18 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>file_counter=22</TD>
-    <TD>command=xelab</TD>
-    <TD>vhdl2008=false</TD>
-    <TD>gendll=false</TD>
-</TR><TR ALIGN='LEFT'>    <TD>sdfmodeling=false</TD>
-    <TD>hwcosim=false</TD>
-    <TD>dpi_used=false</TD>
-    <TD>debug=typical</TD>
+<TR ALIGN='LEFT'>    <TD>command=xsim</TD>
+    <TD>runall=false</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>simulation_image_code=393 KB</TD>
-    <TD>simulation_image_data=2589 KB</TD>
-    <TD>total_nets=6736</TD>
-    <TD>total_processes=3667</TD>
-</TR><TR ALIGN='LEFT'>    <TD>total_instances=618</TD>
-    <TD>xilinx_hdl_libraries_used=secureip unimacro_ver unisims_ver </TD>
-    <TD>compiler_time=1.17_sec</TD>
-    <TD>compiler_memory=63452_KB</TD>
+<TR ALIGN='LEFT'>    <TD>trace_waveform=true</TD>
+    <TD>runtime=3150 ns</TD>
+    <TD>iteration=15</TD>
+    <TD>simulation_time=0.31_sec</TD>
+</TR><TR ALIGN='LEFT'>    <TD>simulation_memory=24420_KB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
